derive-ex-tests/tests/compile_fail/compare_op/hash_field_not_impl_hash.rs
use derive_ex::derive_ex;

#[derive(Eq, PartialEq)]
struct NoHash;

#[derive_ex(Hash, Eq, PartialEq)]
struct X {
    x: NoHash,
}

fn main() {}
